Fix(Firefox) add translateZ only on firefox for scale Svg.

--- a/src/scss/component/home/index.scss
+++ b/src/scss/component/home/index.scss
@@ -12,8 +12,10 @@
 
     &__top-left,
     &__top-right {
-        g {
-            transform: translateZ(0.5px);
+        @include when-inside('.is-firefox') {
+            g {
+                transform: translateZ(0.5px);
+            }
         }
     }
 
@@ -93,8 +95,13 @@
 
             g {
                 transform-origin: center;
-                transform: translateZ(0.5px);
                 opacity: 0;
+            }
+
+            @include when-inside('.is-firefox') {
+                g {
+                    transform: translateZ(0.5px);
+                }
             }
         }
     }
